erDiagram
    factories ||--o{ production_lines : contains
    production_lines ||--o{ assets : structures
    assets ||--|| machines : customizes
    machines ||--o{ sensors : contains
    machines ||--o{ alarms : triggers
    machines ||--o{ machine_failures : charts
    machines ||--o{ maintenance_logs : tracks
    sensors ||--o{ telemetry : logs

    factories {
        uuid id PK
        string name
        string site_code_token
    }
    production_lines {
        uuid id PK
        uuid factory_id FK
        string name
    }
    machines {
        uuid id PK
        uuid production_line_id FK
        string operational_state
        float internal_health_index
    }
    sensors {
        uuid id PK
        uuid machine_id FK
        string model_type
        string target_si_unit
        float absolute_lower_limit
        float absolute_upper_limit
    }
    telemetry {
        timestamp timestamp PK "Hypertable Partition Dimension"
        uuid machine_id FK
        uuid sensor_id FK
        float measured_value
        integer quality_code
    }
    alarms {
        uuid id PK
        uuid machine_id FK
        string anomaly_severity
        string current_state
        timestamp trigger_time
    }
    machine_failures {
        uuid id PK
        uuid machine_id FK
        string fault_classification
        timestamp incident_time
    }
    maintenance_logs {
        uuid id PK
        uuid machine_id FK
        string task_type
        timestamp performance_window_start
        string workflow_status
    }
